Final/y.output
No terminales inútiles en la gramática

   idpf
   if_exp
   if_exp_sentencias
   expf


Terminales no usados en la gramática

   TOK_ERROR


Reglas inútiles en la gramática

   80 idpf: TOK_IDENTIFICADOR

   81 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   82 if_exp_sentencias: if_exp sentencias

   83 expf: exp


Gramática

    0 $accept: programa $end

    1 programa: escritura_inicial TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    2 escritura_inicial: %empty

    3 escritura1: %empty

    4 escritura2: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: clase identificadores TOK_PUNTOYCOMA

    8 clase: clase_escalar
    9      | clase_vector

   10 clase_escalar: tipo

   11 tipo: TOK_INT
   12     | TOK_BOOLEAN

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   14 identificadores: identificador
   15                | identificador TOK_COMA identificadores

   16 funciones: funcion funciones
   17          | %empty

   18 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   19 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   20 funcion: fn_declaration sentencias TOK_LLAVEDERECHA

   21 parametros_funcion: parametro_funcion resto_parametros_funcion
   22                   | %empty

   23 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   24                         | %empty

   25 parametro_funcion: tipo identificador

   26 declaraciones_funcion: declaraciones
   27                      | %empty

   28 sentencias: sentencia
   29           | sentencia sentencias

   30 sentencia: sentencia_simple TOK_PUNTOYCOMA
   31          | bloque

   32 sentencia_simple: asignacion
   33                 | lectura
   34                 | escritura
   35                 | retorno_funcion

   36 bloque: condicional
   37       | bucle

   38 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   39           | elemento_vector TOK_ASIGNACION exp

   40 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   41 condicional: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   42            | TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   43 bucle: while_exp sentencias TOK_LLAVEDERECHA

   44 while: TOK_WHILE TOK_PARENTESISIZQUIERDO

   45 while_exp: while exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   46 lectura: TOK_SCANF TOK_IDENTIFICADOR

   47 escritura: TOK_PRINTF exp

   48 retorno_funcion: TOK_RETURN exp

   49 exp: exp TOK_MAS exp
   50    | exp TOK_MENOS exp
   51    | exp TOK_DIVISION exp
   52    | exp TOK_ASTERISCO exp
   53    | TOK_MENOS exp
   54    | exp TOK_AND exp
   55    | exp TOK_OR exp
   56    | TOK_NOT exp
   57    | TOK_IDENTIFICADOR
   58    | constante
   59    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   61    | elemento_vector
   62    | call_func lista_expresiones TOK_PARENTESISDERECHO

   63 call_func: TOK_IDENTIFICADOR TOK_PARENTESISIZQUIERDO

   64 lista_expresiones: exp resto_lista_expresiones
   65                  | %empty

   66 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   67                        | %empty

   68 comparacion: exp TOK_IGUAL exp
   69            | exp TOK_DISTINTO exp
   70            | exp TOK_MENORIGUAL exp
   71            | exp TOK_MAYORIGUAL exp
   72            | exp TOK_MENOR exp
   73            | exp TOK_MAYOR exp

   74 constante: constante_logica
   75          | constante_entera

   76 constante_logica: TOK_TRUE
   77                 | TOK_FALSE

   78 constante_entera: TOK_CONSTANTE_ENTERA

   79 identificador: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 11
TOK_ARRAY (260) 13
TOK_BOOLEAN (261) 12
TOK_FUNCTION (262) 18
TOK_IF (263) 41 42
TOK_ELSE (264) 42
TOK_WHILE (265) 44
TOK_SCANF (266) 46
TOK_PRINTF (267) 47
TOK_RETURN (268) 48
TOK_PUNTOYCOMA (269) 7 23 30
TOK_COMA (270) 15 66
TOK_LLAVEIZQUIERDA (271) 1 19 41 42 45
TOK_LLAVEDERECHA (272) 1 20 41 42 43
TOK_PARENTESISIZQUIERDO (273) 19 41 42 44 59 60 63
TOK_PARENTESISDERECHO (274) 19 41 42 45 59 60 62
TOK_CORCHETEIZQUIERDO (275) 13 40
TOK_CORCHETEDERECHO (276) 13 40
TOK_MAS (277) 49
TOK_MENOS (278) 50 53
TOK_DIVISION (279) 51
TOK_ASTERISCO (280) 52
TOK_AND (281) 54
TOK_OR (282) 55
TOK_ASIGNACION (283) 38 39
TOK_IGUAL (284) 68
TOK_NOT (285) 56
TOK_DISTINTO (286) 69
TOK_MENORIGUAL (287) 70
TOK_MAYORIGUAL (288) 71
TOK_MENOR (289) 72
TOK_MAYOR (290) 73
TOK_TRUE (291) 76
TOK_FALSE (292) 77
TOK_ERROR (293)
TOK_CONSTANTE_ENTERA (294) 78
TOK_IDENTIFICADOR (295) 18 38 40 46 57 63 79
MENOSU (296)


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
programa (43)
    en la izquierda: 1, en la derecha: 0
escritura_inicial (44)
    en la izquierda: 2, en la derecha: 1
escritura1 (45)
    en la izquierda: 3, en la derecha: 1
escritura2 (46)
    en la izquierda: 4, en la derecha: 1
declaraciones (47)
    en la izquierda: 5 6, en la derecha: 1 6 26
declaracion (48)
    en la izquierda: 7, en la derecha: 5 6
clase (49)
    en la izquierda: 8 9, en la derecha: 7
clase_escalar (50)
    en la izquierda: 10, en la derecha: 8
tipo (51)
    en la izquierda: 11 12, en la derecha: 10 13 18 25
clase_vector (52)
    en la izquierda: 13, en la derecha: 9
identificadores (53)
    en la izquierda: 14 15, en la derecha: 7 15
funciones (54)
    en la izquierda: 16 17, en la derecha: 1 16
fn_name (55)
    en la izquierda: 18, en la derecha: 19
fn_declaration (56)
    en la izquierda: 19, en la derecha: 20
funcion (57)
    en la izquierda: 20, en la derecha: 16
parametros_funcion (58)
    en la izquierda: 21 22, en la derecha: 19
resto_parametros_funcion (59)
    en la izquierda: 23 24, en la derecha: 21 23
parametro_funcion (60)
    en la izquierda: 25, en la derecha: 21 23
declaraciones_funcion (61)
    en la izquierda: 26 27, en la derecha: 19
sentencias (62)
    en la izquierda: 28 29, en la derecha: 1 20 29 41 42 43
sentencia (63)
    en la izquierda: 30 31, en la derecha: 28 29
sentencia_simple (64)
    en la izquierda: 32 33 34 35, en la derecha: 30
bloque (65)
    en la izquierda: 36 37, en la derecha: 31
asignacion (66)
    en la izquierda: 38 39, en la derecha: 32
elemento_vector (67)
    en la izquierda: 40, en la derecha: 39 61
condicional (68)
    en la izquierda: 41 42, en la derecha: 36
bucle (69)
    en la izquierda: 43, en la derecha: 37
while (70)
    en la izquierda: 44, en la derecha: 45
while_exp (71)
    en la izquierda: 45, en la derecha: 43
lectura (72)
    en la izquierda: 46, en la derecha: 33
escritura (73)
    en la izquierda: 47, en la derecha: 34
retorno_funcion (74)
    en la izquierda: 48, en la derecha: 35
exp (75)
    en la izquierda: 49 50 51 52 53 54 55 56 57 58 59 60 61 62, en la derecha:
    38 39 40 41 42 45 47 48 49 50 51 52 53 54 55 56 59 64 66 68 69
    70 71 72 73
call_func (76)
    en la izquierda: 63, en la derecha: 62
lista_expresiones (77)
    en la izquierda: 64 65, en la derecha: 62
resto_lista_expresiones (78)
    en la izquierda: 66 67, en la derecha: 64 66
comparacion (79)
    en la izquierda: 68 69 70 71 72 73, en la derecha: 60
constante (80)
    en la izquierda: 74 75, en la derecha: 58
constante_logica (81)
    en la izquierda: 76 77, en la derecha: 74
constante_entera (82)
    en la izquierda: 78, en la derecha: 13 75
identificador (83)
    en la izquierda: 79, en la derecha: 14 15 25


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 2 (escritura_inicial)

    programa           ir al estado 1
    escritura_inicial  ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 programa: escritura_inicial . TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_MAIN  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    1 programa: escritura_inicial TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 5


Estado 5

    1 programa: escritura_inicial TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7
    TOK_BOOLEAN  desplazar e ir al estado 8

    declaraciones  ir al estado 9
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    tipo           ir al estado 13
    clase_vector   ir al estado 14


Estado 6

   11 tipo: TOK_INT .

    $default  reduce usando la regla 11 (tipo)


Estado 7

   13 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 8

    tipo  ir al estado 15


Estado 8

   12 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 12 (tipo)


Estado 9

    1 programa: escritura_inicial TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . escritura1 funciones escritura2 sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 3 (escritura1)

    escritura1  ir al estado 16


Estado 10

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7
    TOK_BOOLEAN  desplazar e ir al estado 8

    $default  reduce usando la regla 5 (declaraciones)

    declaraciones  ir al estado 17
    declaracion    ir al estado 10
    clase          ir al estado 11
    clase_escalar  ir al estado 12
    tipo           ir al estado 13
    clase_vector   ir al estado 14


Estado 11

    7 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores  ir al estado 19
    identificador    ir al estado 20


Estado 12

    8 clase: clase_escalar .

    $default  reduce usando la regla 8 (clase)


Estado 13

   10 clase_escalar: tipo .

    $default  reduce usando la regla 10 (clase_escalar)


Estado 14

    9 clase: clase_vector .

    $default  reduce usando la regla 9 (clase)


Estado 15

   13 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 21


Estado 16

    1 programa: escritura_inicial TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 . funciones escritura2 sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 23
    fn_name         ir al estado 24
    fn_declaration  ir al estado 25
    funcion         ir al estado 26


Estado 17

    6 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 6 (declaraciones)


Estado 18

   79 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 79 (identificador)


Estado 19

    7 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 27


Estado 20

   14 identificadores: identificador .
   15                | identificador . TOK_COMA identificadores

    TOK_COMA  desplazar e ir al estado 28

    $default  reduce usando la regla 14 (identificadores)


Estado 21

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 29

    constante_entera  ir al estado 30


Estado 22

   18 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 8

    tipo  ir al estado 31


Estado 23

    1 programa: escritura_inicial TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones . escritura2 sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 4 (escritura2)

    escritura2  ir al estado 32


Estado 24

   19 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 33


Estado 25

   20 funcion: fn_declaration . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias        ir al estado 40
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    bucle             ir al estado 47
    while             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 26

   16 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 53
    fn_name         ir al estado 24
    fn_declaration  ir al estado 25
    funcion         ir al estado 26


Estado 27

    7 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce usando la regla 7 (declaracion)


Estado 28

   15 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificadores  ir al estado 54
    identificador    ir al estado 20


Estado 29

   78 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 78 (constante_entera)


Estado 30

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  desplazar e ir al estado 55


Estado 31

   18 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 56


Estado 32

    1 programa: escritura_inicial TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias        ir al estado 57
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    bucle             ir al estado 47
    while             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 33

   19 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 8

    $default  reduce usando la regla 22 (parametros_funcion)

    tipo                ir al estado 58
    parametros_funcion  ir al estado 59
    parametro_funcion   ir al estado 60


Estado 34

   41 condicional: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   42            | TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 61


Estado 35

   44 while: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62


Estado 36

   46 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 63


Estado 37

   47 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 71
    call_func         ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 38

   48 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 76
    call_func         ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 39

   38 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   40 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 77
    TOK_ASIGNACION         desplazar e ir al estado 78


Estado 40

   20 funcion: fn_declaration sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 79


Estado 41

   28 sentencias: sentencia .
   29           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    $default  reduce usando la regla 28 (sentencias)

    sentencias        ir al estado 80
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    bucle             ir al estado 47
    while             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 42

   30 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 81


Estado 43

   31 sentencia: bloque .

    $default  reduce usando la regla 31 (sentencia)


Estado 44

   32 sentencia_simple: asignacion .

    $default  reduce usando la regla 32 (sentencia_simple)


Estado 45

   39 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  desplazar e ir al estado 82


Estado 46

   36 bloque: condicional .

    $default  reduce usando la regla 36 (bloque)


Estado 47

   37 bloque: bucle .

    $default  reduce usando la regla 37 (bloque)


Estado 48

   45 while_exp: while . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 83
    call_func         ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 49

   43 bucle: while_exp . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 34
    TOK_WHILE          desplazar e ir al estado 35
    TOK_SCANF          desplazar e ir al estado 36
    TOK_PRINTF         desplazar e ir al estado 37
    TOK_RETURN         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias        ir al estado 84
    sentencia         ir al estado 41
    sentencia_simple  ir al estado 42
    bloque            ir al estado 43
    asignacion        ir al estado 44
    elemento_vector   ir al estado 45
    condicional       ir al estado 46
    bucle             ir al estado 47
    while             ir al estado 48
    while_exp         ir al estado 49
    lectura           ir al estado 50
    escritura         ir al estado 51
    retorno_funcion   ir al estado 52


Estado 50

   33 sentencia_simple: lectura .

    $default  reduce usando la regla 33 (sentencia_simple)


Estado 51

   34 sentencia_simple: escritura .

    $default  reduce usando la regla 34 (sentencia_simple)


Estado 52

   35 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 35 (sentencia_simple)


Estado 53

   16 funciones: funcion funciones .

    $default  reduce usando la regla 16 (funciones)


Estado 54

   15 identificadores: identificador TOK_COMA identificadores .

    $default  reduce usando la regla 15 (identificadores)


Estado 55

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO .

    $default  reduce usando la regla 13 (clase_vector)


Estado 56

   18 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce usando la regla 18 (fn_name)


Estado 57

    1 programa: escritura_inicial TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura1 funciones escritura2 sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 85


Estado 58

   25 parametro_funcion: tipo . identificador

    TOK_IDENTIFICADOR  desplazar e ir al estado 18

    identificador  ir al estado 86


Estado 59

   19 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  desplazar e ir al estado 87


Estado 60

   21 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  desplazar e ir al estado 88

    $default  reduce usando la regla 24 (resto_parametros_funcion)

    resto_parametros_funcion  ir al estado 89


Estado 61

   41 condicional: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   42            | TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 90
    call_func         ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 62

   44 while: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce usando la regla 44 (while)


Estado 63

   46 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce usando la regla 46 (lectura)


Estado 64

   59 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 91
    call_func         ir al estado 72
    comparacion       ir al estado 92
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 65

   53 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 93
    call_func         ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 66

   56 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 94
    call_func         ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 67

   76 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 76 (constante_logica)


Estado 68

   77 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 77 (constante_logica)


Estado 69

   40 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   57 exp: TOK_IDENTIFICADOR .
   63 call_func: TOK_IDENTIFICADOR . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 95
    TOK_CORCHETEIZQUIERDO    desplazar e ir al estado 77

    $default  reduce usando la regla 57 (exp)


Estado 70

   61 exp: elemento_vector .

    $default  reduce usando la regla 61 (exp)


Estado 71

   47 escritura: TOK_PRINTF exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 96
    TOK_MENOS      desplazar e ir al estado 97
    TOK_DIVISION   desplazar e ir al estado 98
    TOK_ASTERISCO  desplazar e ir al estado 99
    TOK_AND        desplazar e ir al estado 100
    TOK_OR         desplazar e ir al estado 101

    $default  reduce usando la regla 47 (escritura)


Estado 72

   62 exp: call_func . lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    $default  reduce usando la regla 65 (lista_expresiones)

    elemento_vector    ir al estado 70
    exp                ir al estado 102
    call_func          ir al estado 72
    lista_expresiones  ir al estado 103
    constante          ir al estado 73
    constante_logica   ir al estado 74
    constante_entera   ir al estado 75


Estado 73

   58 exp: constante .

    $default  reduce usando la regla 58 (exp)


Estado 74

   74 constante: constante_logica .

    $default  reduce usando la regla 74 (constante)


Estado 75

   75 constante: constante_entera .

    $default  reduce usando la regla 75 (constante)


Estado 76

   48 retorno_funcion: TOK_RETURN exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 96
    TOK_MENOS      desplazar e ir al estado 97
    TOK_DIVISION   desplazar e ir al estado 98
    TOK_ASTERISCO  desplazar e ir al estado 99
    TOK_AND        desplazar e ir al estado 100
    TOK_OR         desplazar e ir al estado 101

    $default  reduce usando la regla 48 (retorno_funcion)


Estado 77

   40 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 64
    TOK_MENOS                desplazar e ir al estado 65
    TOK_NOT                  desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_IDENTIFICADOR        desplazar e ir al estado 69

    elemento_vector   ir al estado 70
    exp               ir al estado 104
    call_func         ir al estado 72
    constante         ir al estado 73
    constante_logica  ir al estado 74
    constante_entera  ir al estado 75


Estado 78

   38 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp
